added routing with refreshing pages

--- a/pages/contact-me.html
+++ b/pages/contact-me.html
@@ -11,6 +11,7 @@
         <p>Address: Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, sunt.</p>
         <p>Phone number: Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, sunt.</p>
         <p>E-mail: Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, sunt.</p>
+        <a href="./">Back to main page</a>
     </body>
 </body>
 </html>
