--- a/pages/index.html
+++ b/pages/index.html
@@ -6,9 +6,10 @@
     <title>Basic informational site</title>
 </head>
 <body>
-    <body>
-        <h1>Basic informational site</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, sunt.</p>
-    </body>
+    <h1>Basic informational site</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, sunt.</p>
+    <a href="/about">About</a>
+    <br />
+    <a href="/contact">Contact me</a>
 </body>
 </html>
