--- a/pages/about.html
+++ b/pages/about.html
@@ -9,7 +9,7 @@
     <body>
         <h1>About</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, sunt.</p>
-        <a href="./">Back to main page</a>
+        <a href="/">Back to main page</a>
     </body>
 </body>
 </html>
